--- a/ml/4/index.html
+++ b/ml/4/index.html
@@ -314,7 +314,7 @@
                     params.name = dadosUsuario.NOME;
                 }
 
-                const url = new URL('../5/index.php', window.location.href);
+                const url = new URL('../5/index.html', window.location.href);
                 Object.keys(params).forEach(key => {
                     url.searchParams.append(key, params[key]);
                 });
