--- a/ml/14-1/index.html
+++ b/ml/14-1/index.html
@@ -192,10 +192,10 @@
             </p>
 
             <div style="text-align: center; font-size: 28px; font-weight: bold; color: #ffbf00;">
-                    R$ 28,30
+                    R$ 24,00
             </div>
 
-            <button onclick="this.innerHTML = '<i class=\'fas fa-spinner fa-spin\' style=\'margin-right: 10px;\'></i>Encaminhando para pagamento'; window.location.href = buildUrlWithParams('https://pay.compraeguraapay.com.br/checkout/d27f375f-161e-4e37-8178-ee222f14c007')" class="button">
+            <button onclick="this.innerHTML = '<i class=\'fas fa-spinner fa-spin\' style=\'margin-right: 10px;\'></i>Encaminhando para pagamento'; window.location.href = buildUrlWithParams('https://pay.especial-promo.shop/6826a2663592a759f11cb1fe')" class="button">
                     Pagar Frete
             </button>
 
