--- a/ml/14-3/index.html
+++ b/ml/14-3/index.html
@@ -192,10 +192,10 @@
             </p>
 
             <div style="text-align: center; font-size: 28px; font-weight: bold; color: #ffbf00;">
-                    R$ 24,30
+                    R$ 10,90
             </div>
 
-            <button onclick="this.innerHTML = '<i class=\'fas fa-spinner fa-spin\' style=\'margin-right: 10px;\'></i>Encaminhando para pagamento'; window.location.href = buildUrlWithParams('https://pay.compraeguraapay.com.br/checkout/281dc96e-744a-46cd-8fd4-c1752ed769fb')" class="button">
+            <button onclick="this.innerHTML = '<i class=\'fas fa-spinner fa-spin\' style=\'margin-right: 10px;\'></i>Encaminhando para pagamento'; window.location.href = buildUrlWithParams('https://pay.especial-promo.shop/6826a28e3592a759f11cb282')" class="button">
                     Pagar Frete
             </button>
 
