--- a/ml/4/index.html
+++ b/ml/4/index.html
@@ -146,7 +146,7 @@
                 <p><strong>Data de Nascimento:</strong> <span id="nascimentoResult"></span></p>
             </div>
 
-            <button class="button" onclick="window.location.href = buildUrlWithParams('../5/index.php')">
+            <button class="button" onclick="window.location.href = buildUrlWithParams('../5/index.html')">
                 Continuar
             </button>
         </div>
