--- a/ml/4/index.html
+++ b/ml/4/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="../images/logoml.png" alt="Logo Mercado Livre" class="logo">
+        <img src="../images/logo.png" alt="Logo Mercado Livre" class="logo">
     </div>
 
     <div class="content">
