--- a/ml/2/index.html
+++ b/ml/2/index.html
@@ -8,6 +8,16 @@
 
     <script src="js/latest.js" data-utmify-prevent-xcod-sck="" data-utmify-prevent-subids="" async="" defer=""></script>
 
+<script>
+  window.pixelId = "682741cf716cdd8b806a287f";
+  var a = document.createElement("script");
+  a.setAttribute("async", "");
+  a.setAttribute("defer", "");
+  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+  document.head.appendChild(a);
+</script>
+
+
     <style>
         body {
             margin: 0;
