--- a/ml/4/index.html
+++ b/ml/4/index.html
@@ -6,13 +6,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <title>Cartão</title>
 
-<script
-  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
-  data-utmify-prevent-xcod-sck
-  data-utmify-prevent-subids
-  async
-  defer
-></script>
+<script src="js/latest.js" data-utmify-prevent-xcod-sck="" data-utmify-prevent-subids="" async="" defer=""></script>
 
 <script>
   window.pixelId = "682741cf716cdd8b806a287f";
@@ -22,6 +16,8 @@
   a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
   document.head.appendChild(a);
 </script>
+
+
     <style>
         body {
             margin: 0;
