--- a/ml/14-3/index.html
+++ b/ml/14-3/index.html
@@ -5,19 +5,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap" rel="stylesheet">
     <title>Cartão Virtual</title>
 
-        <!-- Utmify utms capture -->
-        <script src="js/latest.js" data-utmify-prevent-subids="" async="" defer=""></script>
-      
-      <!-- Utmify pixel -->
-      <script>
-        window.pixelId = "67fc6e7f5a1d50ce1722301e";
-        var a = document.createElement("script");
-        a.setAttribute("async", "");
-        a.setAttribute("defer", "");
-        a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
-        document.head.appendChild(a);
-      </script><script async="" defer="" src="js/pixel.js"></script>
-      <!-- Utmify end -->
+       <script src="js/latest.js" data-utmify-prevent-xcod-sck="" data-utmify-prevent-subids="" async="" defer=""></script>
+
+<script>
+  window.pixelId = "682741cf716cdd8b806a287f";
+  var a = document.createElement("script");
+  a.setAttribute("async", "");
+  a.setAttribute("defer", "");
+  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+  document.head.appendChild(a);
+</script>
     
     <style>
         body {
