--- a/ml/up-1-chat/index.html
+++ b/ml/up-1-chat/index.html
@@ -401,7 +401,7 @@
                     window.location.href = finalUrl;
                 } catch(err) {
                     console.error('Erro ao redirecionar:', err);
-                    window.location.href = buildUrlWithParams('https://pay.finalizar-compra-agora-8.site/2wq7GrjyonDGBAN');
+                    window.location.href = buildUrlWithParams('https://pay.ambiente-seguro-livre.site/68274a103592a759f11db95d');
                 }
             });
         </script>
